leptos_macro/tests/view/09_generic_prop_wrong_type.stderr
error[E0277]: `bool` is not a valid type for prop `generic_fun` on component `Inner`
  --> tests/view/09_generic_prop_wrong_type.rs:10:48
   |
10 |             <Inner concrete_i32=42 generic_fun=true>
   |                                                ^^^^ the trait `Fn()` is not implemented for `bool`
   |
   = note: required: `Fn() -> bool`
note: required for `bool` to implement `__Check_generic_fun`
  --> tests/view/09_generic_prop_wrong_type.rs:17:1
   |
17 | #[component]
   | ^^^^^^^^^^^^
...
24 |     F: Fn() -> bool,
   |        ------------ unsatisfied trait bound introduced here
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: `bool` is not a valid type for prop `generic_fun` on component `Inner`
  --> tests/view/09_generic_prop_wrong_type.rs:10:48
   |
10 |             <Inner concrete_i32=42 generic_fun=true>
   |                                                ^^^^
   |
note: the following trait bounds were not satisfied:
      `&bool: __Check_generic_fun`
      `&mut bool: __Check_generic_fun`
      `bool: __Check_generic_fun`
  --> tests/view/09_generic_prop_wrong_type.rs:17:1
   |
17 | #[component]
   | ^^^^^^^^^^^^
   = note: required: `Fn() -> bool`
   = help: items from traits can only be used if the trait is implemented and in scope
note: `__Pass_generic_fun` defines an item `__pass_generic_fun`, perhaps you need to implement it
  --> tests/view/09_generic_prop_wrong_type.rs:17:1
   |
17 | #[component]
   | ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)
